--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.18",
+    "@mui/lab": "^5.0.0-alpha.153",
     "@mui/material": "^5.14.18",
+    "@mui/x-date-pickers": "^6.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.18.0",
